<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@color/white">

    <ImageView
        android:id="@+id/back_to_login_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:src="@drawable/baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:fontFamily="@font/ubuntu_medium"
        android:gravity="center"
        android:text="@string/sign_up"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/email_len"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="185dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_title"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/email_login"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/baseline_email_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_title" />

        <EditText
            android:id="@+id/email_et"
            android:layout_width="242dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu_light"
            android:hint="@string/email"
            app:layout_constraintStart_toEndOf="@+id/email_login"
            app:layout_constraintTop_toBottomOf="@+id/login_title" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/username_len"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_len">


        <ImageView
            android:id="@+id/username_image"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/baseline_person_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_title" />

        <EditText
            android:id="@+id/username_et"
            android:layout_width="242dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu_light"
            android:hint="@string/username"
            app:layout_constraintStart_toEndOf="@+id/email_login"
            app:layout_constraintTop_toBottomOf="@+id/login_title" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/pass_len"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_len">

        <ImageView
            android:id="@+id/pass_login"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/baseline_lock_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_login" />

        <EditText
            android:id="@+id/pass_et"
            android:layout_width="242sp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu_light"
            android:hint="@string/password"
            app:layout_constraintStart_toEndOf="@+id/pass_login"
            app:layout_constraintTop_toBottomOf="@+id/email_et" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="268sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:fontFamily="@font/ubuntu_bold"
        android:text="@string/sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass_len" />

</androidx.constraintlayout.widget.ConstraintLayout>